Times on UI no longer wrap

--- a/widow-analyze/src/main/sass/widow.sass
+++ b/widow-analyze/src/main/sass/widow.sass
@@ -7,6 +7,9 @@ body
 h3.visit-time
   margin-top: auto
 
+td.visit-links
+  white-space: nowrap
+
 table.headers
   td:first-child
     white-space: nowrap
